--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.7.6",
     "react": "16.8.3",
     "react-native": "0.59.5",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-modal": "^10.0.0",
     "react-native-tab-view": "^2.2.0",
     "save": "^2.3.3"
